--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,20 @@
 	<groupId>com.gtech</groupId>
 	<version>1.0.0-SNAPSHOT</version>
 	
+	<licenses>
+		<license>
+			<name>The Apache License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+		</license>
+	</licenses>
+
+	<developers>
+		<developer>
+			<name>Jérémy Colombet</name>
+			<email>colombetj@gmail.com</email>
+		</developer>
+	</developers>
+	
 	<dependencies>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
