--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<packaging>jar</packaging>
-	<artifactId>pegasus-core</artifactId>
-	<groupId>com.gtech</groupId>
+	<artifactId>garganttua-server-core</artifactId>
+	<groupId>com.garganttua</groupId>
 	<version>1.0.0-SNAPSHOT</version>
 
 	<licenses>
@@ -25,12 +25,12 @@
 		<snapshotRepository>
 			<id>github</id>
 			<name>GitHub Packages</name>
-			<url>https://maven.pkg.github.com/garganttua/pegasus-core</url>
+			<url>https://maven.pkg.github.com/garganttua/garganttua-server-core</url>
 		</snapshotRepository>
 		<repository>
 			<id>github</id>
 			<name>GitHub Packages</name>
-			<url>https://maven.pkg.github.com/garganttua/pegasus-core</url>
+			<url>https://maven.pkg.github.com/garganttua/garganttua-server-core</url>
 		</repository>
 	</distributionManagement>
 	
