--- a/pom.xml
+++ b/pom.xml
@@ -35,11 +35,6 @@
 	</distributionManagement>
 	
 	<dependencies>
-<!--		<dependency>-->
-<!--			<groupId>com.fasterxml.jackson.core</groupId>-->
-<!--			<artifactId>jackson-databind</artifactId>-->
-<!--			<version>2.13.3</version>-->
-<!--		</dependency>-->
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -59,18 +54,21 @@
 			<groupId>org.update4j</groupId>
 			<artifactId>update4j</artifactId>
 			<version>1.5.9</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>2.0.7</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
 			<version>2.0.7</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 	
